# OniCode

./: .gitignore  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.onicode/: instructions.md
.onicode/agents/: README.md  explore.md  general.md
.onicode/commands/: git-commit.md  review.md
.onicode/scripts/: mssql.sh
.onicode/skills/Supabase/: SKILL.md
.onicode/tools/MSSQL/: TOOL.md
.onicode/tools/gh_pr_create/: TOOL.md
.onicode/tools/gh_pr_merge/: TOOL.md
crates/config/: Cargo.toml
crates/config/src/: agent_config.rs  config.rs  cron.rs  error.rs  hooks.rs  lib.rs  settings.rs  skill.rs  tool_def.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  client.rs  compaction.rs  context.rs  error.rs  event_stream.rs  lib.rs  message.rs  message_queue.rs  permissions.rs  question.rs  session.rs  session_store.rs  tool.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  config.rs  error.rs  lib.rs  tool.rs  transport.rs
crates/onicode/: Cargo.toml
crates/onicode/src/: main.rs  onboarding.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  edit.rs  gh.rs  glob_tool.rs  grep.rs  lib.rs  ls.rs  read.rs  task.rs  write.rs
crates/tools/src/sandbox/: config.rs  mod.rs  platform.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  components.rs  events.rs  lib.rs  renderer.rs  theme.rs
