[workspace]
resolver = "2"
members = [
    "crates/onicode",
    "crates/core",
    "crates/tui",
    "crates/tools",
    "crates/mcp",
    "crates/config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["OniCode Contributors"]
license = "MIT"
repository = "https://github.com/onicode/onicode"
description = "Open source terminal-based AI coding agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tokio-cron-scheduler = "0.13"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = "5.0"

# MCP
rmcp = { version = "0.1", features = ["client", "transport-io", "transport-sse", "transport-child-process"] }

# HTTP / LLM
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Filesystem
glob = "0.3"
grep = "0.3"
ignore = "0.4"
notify = "8.0"

# PTY
portable-pty = "0.9"

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
once_cell = "1.21"
parking_lot = "0.12"
regex = "1.11"
toml = "0.8"
pulldown-cmark = "0.13"
sha2 = "0.10"

[profile.release]
lto = "thin"
strip = true
codegen-units = 16

[profile.dev]
split-debuginfo = "unpacked"
