[package]
name = "onicode-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Built-in tools for OniCode (Bash, Read, Write, Edit, Glob, Grep, LS...)"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
glob.workspace = true
ignore.workspace = true
notify.workspace = true
portable-pty.workspace = true
parking_lot.workspace = true
regex.workspace = true
onicode-core = { path = "../core" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "processthreadsapi", "securitybaseapi"] }

[dev-dependencies]
tempfile = "3.19"
