[package]
name = "onicode-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Terminal UI for OniCode using ratatui and crossterm"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
chrono.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
onicode-core = { path = "../core" }
onicode-config = { path = "../config" }
